--- a/content/blog/manga-spotlight-apr25.mdx
+++ b/content/blog/manga-spotlight-apr25.mdx
@@ -1,14 +1,36 @@
 ---
 title: Manga Spotlight Apr'25
-description: 'The Urban Legend Files, My Dearest Self With Malice Aforethought'
-date: 2025-04-13
+description: 'The Urban Legend Files, My Dearest Self With Malice Aforethought, Blue Flag'
+date: 2025-04-22
 tags: ["manga", "recommendation"]
 published: true
 ---
 
-📅 **Last Updated:** 13th April 2025
+📅 **Last Updated:** 22nd April 2025
 
 <div style={{marginBottom: '-15px', marginTop: '0px'}}>
+    # **Blue Flag**
+</div>
+
+_Blue Flag_ is a youth romance drama whose strong points are its realistic characters, fitting art and engaging conversations. KAITO has a knack for writing extremely riveting dialogues and conversations between the characters, which lends to my point of them feeling very organic and outside standard youth drama tropes - their uncertainties feel like things high school or college students would actually worry about - trying to make sense of who they are, who do they want to be, where do they fit into society, and if they can fit the mold prepared for them? Chapter 44 is a prime example of this, where the discussion really is a deconstruction of the various opinions on people’s views on LGBTQ.
+
+<div align="center" style = {{marginTop: '-15px', marginBottom: '-15px'}}>
+    <img src="/images/blog/manga-spotlight-apr25/blue-flag.webp"/>
+</div>
+
+KAITO's art fits the tone of the series very well, with cute dorky expressions highlighting comedic and wholesome scenes, and expressions of intense emotional turmoil pulling you into contemplative scenes. A short but turbulent read of 54 chapters, _Blue Flag_ can be your next gripping weekend read, or a patient read spanning a week or two - whatever the case may be, it is sure to enchant you.
+
+**More Info:**
+<a href="https://myanimelist.net/manga/103942/Ao_no_Flag" target="_blank">MAL</a>,
+<a href="https://anilist.co/manga/98334/Ao-no-Flag" target="_blank">Anilist</a>,
+<a href="https://en.wikipedia.org/wiki/Blue_Flag_(manga)" target="_blank">Wikipedia</a> \
+**Credits:** Kedar
+(<a href="https://myanimelist.net/profile/cedaru" target="_blank">MAL</a>,
+<a href="https://x.com/agbzzt11037" target="_blank">Twitter</a>)
+
+<hr className="my-0 mt-2 border-t-2 mb-4" />
+
+<div style={{marginBottom: '0px', marginTop: '0px'}}>
     # **My Dearest Self With Malice Aforethought**
 </div>
 
