--- a/content/blog/anime-which-people-dont-talk-about.mdx
+++ b/content/blog/anime-which-people-dont-talk-about.mdx
@@ -31,7 +31,7 @@ If you enjoy isekai with a twist, chaotic relationships, and a mix of humor and 
 <a href="https://anilist.co/anime/251/Kyou-kara-Maou" target="_blank">Anilist</a>,
 <a href="https://en.wikipedia.org/wiki/Kyo_Kara_Maoh!" target="_blank">Wikipedia</a>
 
-<hr className="my-4 mt-8 mb-8 border-t-2" />
+<hr className="my-8 w-1/2 mx-auto border-t-4 border-[#f05a78]" />
 
 <div style={{marginBottom: '-10px', marginTop: '0px'}}>
   # **<span style={{'color': 'red'}}>#2</span> The Story of Saiunkoku**
@@ -55,7 +55,7 @@ And yes, there’s romance, but what I love most is how Shuurei prioritizes her 
 <a href="https://anilist.co/anime/957/Saiunkoku-Monogatari" target="_blank">Anilist</a>,
 <a href="https://en.wikipedia.org/wiki/The_Story_of_Saiunkoku" target="_blank">Wikipedia</a>
 
-<hr className="my-4 mt-8 mb-8 border-t-2" />
+<hr className="my-8 w-1/2 mx-auto border-t-4 border-[#f05a78]" />
 
 <div style={{marginBottom: '-10px', marginTop: '0px'}}>
   # **<span style={{'color': 'red'}}>#3</span> Black Cat**
@@ -79,7 +79,7 @@ The anime does rush the ending a bit (manga readers know), but the journey is so
 <a href="https://anilist.co/anime/68/Black-Cat" target="_blank">Anilist</a>,
 <a href="https://en.wikipedia.org/wiki/Black_Cat_(manga)" target="_blank">Wikipedia</a>
 
-<hr className="my-4 mt-8 mb-8 border-t-2" />
+<hr className="my-8 w-1/2 mx-auto border-t-4 border-[#f05a78]" />
 
 <div style={{marginBottom: '-10px', marginTop: '0px'}}>
   # **<span style={{'color': 'red'}}>#4</span> Lovely Complex**
@@ -103,7 +103,7 @@ The humor is top-tier, the romance is fluffy yet realistic, and the chemistry be
 <a href="https://anilist.co/anime/2034/LovelyComplex" target="_blank">Anilist</a>,
 <a href="https://en.wikipedia.org/wiki/Love_Com" target="_blank">Wikipedia</a>
 
-<hr className="my-4 mt-8 mb-8 border-t-2" />
+<hr className="my-8 w-1/2 mx-auto border-t-4 border-[#f05a78]" />
 
 <div style={{marginBottom: '-10px', marginTop: '0px'}}>
   # **<span style={{'color': 'red'}}>#5</span> Desert Punk**
@@ -129,4 +129,4 @@ If you love ecchi done with a sense of humor and a protagonist who’s more horn
 <a href="https://anilist.co/anime/25/Sunabouzu" target="_blank">Anilist</a>,
 <a href="https://en.wikipedia.org/wiki/Desert_Punk" target="_blank">Wikipedia</a>
 
-<hr className="my-4 mt-8 mb-4 border-t-2" />
+<hr className="my-8 w-1/2 mx-auto border-t-4 border-[#f05a78]" />
