--- a/content/blog/anime-spotlight-apr25.mdx
+++ b/content/blog/anime-spotlight-apr25.mdx
@@ -1,33 +1,53 @@
 ---
 title: Anime Spotlight Apr'25
-description: "×××HOLiC"
-date: 2025-04-13
+description: "×××HOLiC, Pluto"
+date: 2025-04-25
 tags: ["anime", "recommendation"]
 published: true
 ---
 
 📅 &nbsp;
-**Last Updated:** 13th April 2025
+**Last Updated:** 25th April 2025
 
 <div style={{marginBottom: '-10px', marginTop: '0px'}}>
+  # **Pluto**
+</div>
+
+What happens when humans try to create robots which are as close as possible to humans? _Pluto_ is a mystery anime about the coexistence of humans and robots in a futuristic world. There is a serial killer on the loose targeting a group of robots who are considered as heroes of the current generation. And it is upto the main character Gesict to solve this mystery who has a post of his own to uncover. 
+
+<iframe style={{'width': '100%', 'aspectRatio': '16/9', 'marginBottom': '20px'}} src="https://www.youtube.com/embed/9ez8lm9I26Y" frameBorder="0" allow="fullscreen;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+
+If you are a fan of mystery anime then this one is definitely a must watch as it is from the author Naoki Urasawa who has authored other famous works like _Monster_.
+This anime has a stellar dub performance from the voice actors and the animation quality is very good. 
+
+**More Info:**
+<a href="https://myanimelist.net/anime/35737/Pluto" target="_blank">MAL</a>,
+<a href="https://anilist.co/anime/99088/PLUTO" target="_blank">Anilist</a>,
+<a href="https://en.wikipedia.org/wiki/Pluto_(TV_series)" target="_blank">Wikipedia</a> \
+**Official Streaming:** Netflix \
+**Credits:** Anil (<a href="https://myanimelist.net/profile/anil_gopal" target="_blank">MAL</a>)
+
+<hr className="my-4 mt-8 mb-8 border-t-2" />
+
+<div style={{marginBottom: '0px', marginTop: '0px'}}>
   # **×××HOLiC**
 </div>
 
-CLAMP's _xxxHOLiC_ (2006) and directed by Tsutomu Mizushima is a fine blend of supernatural, human psychology, and folklore. It tells the story of Watanuki Kimihiro, a high schooler cursed with the ability to see spirits, and the mysterious Yūko Ichihara, a witch who grants wishes—for a price. The anime touches on themes of addiction, obsession, and human weaknesses, intertwined with their working relationship.
+CLAMP's _×××HOLiC_ (2006) and directed by Tsutomu Mizushima is a fine blend of supernatural, human psychology, and folklore. It tells the story of Watanuki Kimihiro, a high schooler cursed with the ability to see spirits, and the mysterious Yūko Ichihara, a witch who grants wishes—for a price. The anime touches on themes of addiction, obsession, and human weaknesses, intertwined with their working relationship.
 
 <div style={{marginBottom: '-10px', marginTop: '-10px', textAlign: 'center'}}>
   <img src="/images/blog/anime-spotlight-apr25/xxxHOLiC-1.webp" className="rounded-xl" style={{margin: '0 auto', display: 'block'}} />
 </div>
 
-The title itself, inspired by the concept of addiction, is a clever twist. CLAMP chose the suffix "holic" to reflect the struggles of people with their compulsions. In Japanese, "xxx" acts as a placeholder, making the title pronounced simply as "-holic." This gives the series a unique angle, most evident in _xxxHOLiC: A Midsummer Night's Dream_, where "holic" directly refers to obsessive collectors.
+The title itself, inspired by the concept of addiction, is a clever twist. CLAMP chose the suffix "holic" to reflect the struggles of people with their compulsions. In Japanese, "×××" acts as a placeholder, making the title pronounced simply as "-holic." This gives the series a unique angle, most evident in _×××HOLiC: A Midsummer Night's Dream_, where "holic" directly refers to obsessive collectors.
 
-Although _xxxHOLiC_ is inspired by traditional Japanese aesthetics, it borrows from modern gothic and avant-garde fashions. Yūko Ichihara’s extravagant outfits, adorned with kimonos, lace, and elaborate designs, became iconic. This fusion of classical and contemporary styles adds a remarkable visual dimension.
+Although _×××HOLiC_ is inspired by traditional Japanese aesthetics, it borrows from modern gothic and avant-garde fashions. Yūko Ichihara’s extravagant outfits, adorned with kimonos, lace, and elaborate designs, became iconic. This fusion of classical and contemporary styles adds a remarkable visual dimension.
 
 <div style={{marginBottom: '-10px', marginTop: '-10px', textAlign: 'center'}}>
   <img src="/images/blog/anime-spotlight-apr25/xxxHOLiC-2.webp" className="rounded-xl" style={{margin: '0 auto', display: 'block'}} />
 </div>
 
-Breaking the screen in 2006, _xxxHOLiC_ stood out amidst action-heavy narratives, offering introspective storytelling. Its cultural impact remains profound, exploring human flaws and influencing fan art and cosplay communities, solidifying CLAMP’s reputation as masters of intricate storytelling and design.
+Breaking the screen in 2006, _×××HOLiC_ stood out amidst action-heavy narratives, offering introspective storytelling. Its cultural impact remains profound, exploring human flaws and influencing fan art and cosplay communities, solidifying CLAMP’s reputation as masters of intricate storytelling and design.
 
 **More Info:**
 <a href="https://myanimelist.net/anime/861/xxxHOLiC" target="_blank">MAL</a>,
