Changed png files to webp

--- a/content/blog/gimaisei.mdx
+++ b/content/blog/gimaisei.mdx
@@ -3,10 +3,10 @@
 The viewpoint I want to offer is, instead, from an enjoyer of the light novels. *GimaiSei* is a masterful adaptation in lots of ways, and perhaps the most obvious one is the use of the show-not-tell style of storytelling. While it might seem like an obvious thing to do for an audio-visual medium, *GimaiSei* as an LN is extremely dense with dialogue and exposition of character thought processes - you could probably have the entire series as a podcast and not necessarily lose context. And so, it becomes quite difficult to convey the nuances of the main characters (which are exposited immensely through text in the LNs) without having lots of narration. But the anime does achieve this feat. You instantly understand Saki's unfamiliarity in her new home in the post-credit scene of Episode 1 with her fumbling the light switches. You understand Yuuta not being used to entering a not-empty house after work with the change in artstyle to a rougher, crayon sketch-like one in the same episode - this being a consistent theme for depicting novel experiences for the main duo when the pace slows down to make the audience understand that the scene being portrayed is important for the characters. The diary segment having very specific visual direction like a movie on an old-fashioned film reel and the anime-only usage of cassette tapes to drive in a sense of wistfulness and melancholy on the Asamura family's past are examples of using physical devices to depict specific emotions elicited by the concerned content; the former of which is written as a normal diary entry at the end of each light novel volume. 
 
 <div align="center" style={{marginBottom: '-10px', marginTop: '-10px'}}>
-  <img src="/images/blog/gimaisei/image1.png" className="rounded-xl" />
+  <img src="/images/blog/gimaisei/image1.webp" className="rounded-xl" />
 </div>
 <div align="center" style={{marginBottom: '-10px', marginTop: '-10px'}}>
-  <img src="/images/blog/gimaisei/image2.png" className="rounded-xl" />
+  <img src="/images/blog/gimaisei/image2.webp" className="rounded-xl" />
 </div>
 
 For me, I am better at understanding spoken Japanese than reading. And so, hearing the use of specific grammar patterns by Saki added another layer of dimensionality. Her unusally formal language (in Episode 1, usage of the verb すり合わせ/*suriawase*, which means 'reconciling, comparing and adjusting, bouncing of ideas, opinions etc. to obtain a fine-tuned integrated whole.' which is very much like her and Yuuta's proposed ideal relationship) and the tacking on of adjectives to her feelings to make them feel more tangible help us understand her just a bit more. 
@@ -26,34 +26,34 @@ To speak of sound direction outside voice acting, the OST is very minimally used
 While the show's animation is certainly not stellar, Episode 5's theater scene stands out in every possible way. The video resolution changes, the colors brighten, and there's a breathtaking melody in the second movie segment with a beautiful ukulele and violin duet. 
 
 <div align="center" style={{marginBottom: '-10px', marginTop: '-10px'}}>
-  <img src="/images/blog/gimaisei/image3.png" className="rounded-xl" />
+  <img src="/images/blog/gimaisei/image3.webp" className="rounded-xl" />
 </div>
 <div align="center" style={{marginBottom: '-10px', marginTop: '-10px'}}>
-  <img src="/images/blog/gimaisei/image4.png" className="rounded-xl" />
+  <img src="/images/blog/gimaisei/image4.webp" className="rounded-xl" />
 </div>
 <div align="center" style={{marginBottom: '-10px', marginTop: '-10px'}}>
-  <img src="/images/blog/gimaisei/image5.png" className="rounded-xl" />
+  <img src="/images/blog/gimaisei/image5.webp" className="rounded-xl" />
 </div>
 
 My notes for the music were "*Words cannot express how much I liked this. It's genuinely among the best compositions I've heard. Great melancholic emotional portrayal, lovely rhythm accents. My lord. It was beautiful.*" which is perhaps overkill but the point is, this section was so unlike the mature (almost gloomy) atmosphere of the series that it felt like a blast of the spring breeze. In fact, Episode 5 deserves mention not only for this scene. It's the episode with the biggest deviation from the light novels, which Mikawa Ghost-sensei in his [commentary for the episode](https://x.com/mikawaghost/status/1819010695134081224) attributes to the staff "loving Yomiuri-senpai way too much". The anime gives her a much better resolution than the light novels, and it was endearing seeing this because it gave Shiori-senpai a lot more dimensionality than what she was made out to be till this point. A great example of how the anime, in deviating from the source, becomes a wonderful adaptation. 
 
 <div align="center" style={{marginBottom: '-10px', marginTop: '-10px'}}>
-  <img src="/images/blog/gimaisei/image6.png" className="rounded-xl" />
+  <img src="/images/blog/gimaisei/image6.webp" className="rounded-xl" />
 </div>
 
 The anime-only bits don't stop here. Besides the previously mentioned cassette tapes, the visual imagery with water and children are used beautifully for Saki. Saki's child self submerged in water shows her lost innocence, and how she needed to lock away her childish innocence for her mother. In fact, the theme of innocence being depicted through children is most prominent in the series' opening (with a beautiful beautiful song performed by fhana), which asks "What if Saki and Yuuta met each other as kids, before they each locked away their innocence?". The depth of visual storytelling done to show Saki's character is why I honestly consider her to be the protagonist of the anime, even though we follow (mainly) Yuuta's perspective. 
 
 <div align="center" style={{marginBottom: '-10px', marginTop: '-10px'}}>
-  <img src="/images/blog/gimaisei/image7.png" className="rounded-xl" />
+  <img src="/images/blog/gimaisei/image7.webp" className="rounded-xl" />
 </div>
 <div align="center" style={{marginBottom: '-10px', marginTop: '-10px'}}>
-  <img src="/images/blog/gimaisei/image8.png" className="rounded-xl" />
+  <img src="/images/blog/gimaisei/image8.webp" className="rounded-xl" />
 </div>
 
 To finish off this write-up, I want to tie everything to how I view *GimaiSei*'s anime as a **complementary** adaptation. And I want to start off by mentioning my biggest criticism of the anime - Yuuta. Which is seen most strongly in Episode 9's pool scene, where the complementary nature of the adaptation rings the most true. Keeping aside the beautiful execution of Yuuta's pool realization (usage of silence; the Ueno ground scene framing, as I will call it, which frames the character in focus on a tiny stretch of the screen's upper half; the muted colors which give the impression of the scene being a very fundamental realization), this doesn't convey the magnitude of Yuuta's emotions. Throughout the series, Yuuta is understood only through speculation, contrasted with Saki and even Yomiuri - the former has her aforementioend diary segments, anime-original sequences with her child self expressing her repressed feelings and the child she never could be, and the latter having an anime-original silent scene to express her emotions in Episode 5. We never understand Yuuta in the anime to this extent, and when we are shown what I consider the culmination of the duo's slow dynamic shift, we see a brilliantly done but extremely shallow romantic realization. Yes, we see his thoughts after the realization as a monologue, but I do not buy it. This is the strongest flaw of the anime, and because it's my favorite moment in the series, I am extremely biased. Given how much love is given to expressing her thoughts and emotions, through visual metaphors in and out of the diary segments, she is definitely the main character for the anime. In the light novel, there is a small lead up, where Yuuta has the selfish thought of how perhaps his effort to cross their initial boundaries was solely for himself (which the anime tries to show through the montage of Saki’s smiles), which gave the realisation much more weight. A lot of Yuuta's character development in the anime is silent (both verbally and visually) and I will go as far as to say it wasn't shown at all. Yes, novels spell his thoughts out for you so it's easier for the reader to understand him, but the anime does a splendid job showing Saki through visual cues. I really don't see how Yuuta couldn't have been handled in a similar manner.
 
 <div align="center" style={{marginBottom: '-10px', marginTop: '-10px'}}>
-  <img src="/images/blog/gimaisei/image9.png" className="rounded-xl" />
+  <img src="/images/blog/gimaisei/image9.webp" className="rounded-xl" />
 </div>
 
 Having said all this, if a series makes me invested enough to care about its flaws, it's an experience I will cherish. And because of my experience with the light novel, I could fully appreciate the anime's originality and how the LN's expositions were translated through brilliant visual and audio direction. I imagine the reverse process of going to the LN from the anime would take more work, but either way, it gives the audience a much deeper appreciation for the wonder Souta Ueno had crafted. 
