--- a/content/blog/gimaisei.mdx
+++ b/content/blog/gimaisei.mdx
@@ -13,8 +13,8 @@ For me, I am better at understanding spoken Japanese than reading. And so, heari
 
 And while we're on this topic, the voice acting direction is fantastic. Of course, you need this to be solid for a series so heavily focused on conversations, and *GimaiSei* delivers nicely. A major theme of the characters' relationship dynamic is how they draw clear lines for essentially everything. This, of course, changes over the course of the series as the duo begins to step over these lines and acknowledge that they will impose on each other (which is why I consider *GimaiSei* an exception romance drama but that's a different conversation). For example, in Episode 4, you have the following conversation when Yuuta is making breakfast for the two:
 
-> **S**: "But I promised..."
->**Y** "As your instructor, I want you to pass the retest. So I'd prefer it if you concentrated on your studies today."
+> **S**: "But I promised..." \
+>**Y** "As your instructor, I want you to pass the retest. So I'd prefer it if you concentrated on your studies today." \
 >**S**: "Thanks. Then I'll do just that"
 
 Typing this out makes it feel like the conversation was so stiff (intonation and tone of speech really matter, whew), but it shows the pair attempting to be clear with their words. Saki feels bad because she isn't holding up her end of the contract, and Yuuta, instead of saying "Oh it's fine, you should focus on your studies today" (like I would say, or I think most people would say), he is specific and assumes the clearly defined stance of Saki's instructor in saying that he wants her to focus on her studies. While the two ultimately mean the same, the first is a more personable/amicable/"lax" sentiment, while the second is clearer. It sounds curt but this is what makes up the pair's dynamic and I want to point this out. Yuuta ends the conversation by saying Saki doesn't owe him anything for it, which is a reconciliation but in a clearly defined stance considering gains and losses. 
