Added document link

--- a/content/blog/gimaisei.mdx
+++ b/content/blog/gimaisei.mdx
@@ -61,3 +61,5 @@ Having said all this, if a series makes me invested enough to care about its fla
 My biggest feeling after watching this anime is awe, and how a different perspective can elevate a medium. Mikawa always insists how the anime is Ueno’s work with minimal inputs from him, and I really respect the two of them for this. Ueno had the freedom to express his interpretations even within the restraints of poor production - I don’t know if we would have seen such creative usage of video filters, the diary movie style, although saying this probably sells Ueno’s passion short. The series is in no way perfect, but that is why it is a masterpiece for me. And as always, if I am finding something to passionately gripe about, then I am fully invested in it (namely episode 9). Honestly, I first thought that me having read the novels might be a bad thing. But my favorite aspect of this work, which is how the adaptation adds to the source, would not be as loved by me if not for that.
 
 God bless Souta Ueno
+
+For a more unstructured episode-by-episode commentary, you can check out [this document.](https://docs.google.com/document/d/e/2PACX-1vR5jBUFRnH2ZHm2VNhdC3wayGS7TQOrcq1xjuxNPcXS17qPTVf1m9YDGD1Jabbx1Nvjq9LNNciQIAfk/pub)
