--- a/content/blog/gimaisei.mdx
+++ b/content/blog/gimaisei.mdx
@@ -1,3 +1,11 @@
+---
+title: Gimai Seikatsu - Complementarity at its finest 
+description: 'Gimai Seikatsu'
+date: 2024-05-01
+tags: ["anime"]
+published: true
+---
+
 *Gimai Seikatsu* or *GimaiSei* (EN: *Days with my Stepsister*) aired in Summer 2024 and started off with very mixed expectations. The title is very reminescent of the incest romantic comedies that Japan seemingly loves (classic examples being *OreImo* and *Eromanga-sensei*), which was perhaps the main reason the series has a slow start in its following. As more episodes aired, and as more people took interest in watching (hopefully owing to fans of the original light novel series such as myself raving about it), the series shot up in popularity. The series director, **Souta Ueno** proved himself to be a massive underdog and received ubiquitous praise for his visual storytelling in *GimaiSei*. There are lovely articles explaining his technical marvel - I personally recommend [Sakugabooru's analysis on the first four episodes](https://blog.sakugabooru.com/2024/08/01/gimai-seikatsu/) and the LN writer **Mikawa Ghost**-sensei's [episodic commentaries](https://x.com/mikawaghost/status/1808863069390680504) - which detail a lot of the nuances involved in the production that the audience might not have picked up on.
 
 The viewpoint I want to offer is, instead, from an enjoyer of the light novels. *GimaiSei* is a masterful adaptation in lots of ways, and perhaps the most obvious one is the use of the show-not-tell style of storytelling. While it might seem like an obvious thing to do for an audio-visual medium, *GimaiSei* as an LN is extremely dense with dialogue and exposition of character thought processes - you could probably have the entire series as a podcast and not necessarily lose context. And so, it becomes quite difficult to convey the nuances of the main characters (which are exposited immensely through text in the LNs) without having lots of narration. But the anime does achieve this feat. You instantly understand Saki's unfamiliarity in her new home in the post-credit scene of Episode 1 with her fumbling the light switches. You understand Yuuta not being used to entering a not-empty house after work with the change in artstyle to a rougher, crayon sketch-like one in the same episode - this being a consistent theme for depicting novel experiences for the main duo when the pace slows down to make the audience understand that the scene being portrayed is important for the characters. The diary segment having very specific visual direction like a movie on an old-fashioned film reel and the anime-only usage of cassette tapes to drive in a sense of wistfulness and melancholy on the Asamura family's past are examples of using physical devices to depict specific emotions elicited by the concerned content; the former of which is written as a normal diary entry at the end of each light novel volume. 
