Made edits to content

--- a/content/blog/gimaisei.mdx
+++ b/content/blog/gimaisei.mdx
@@ -17,13 +17,13 @@ The viewpoint I want to offer is, instead, from an enjoyer of the light novels. 
   <img src="/images/blog/gimaisei/image2.webp" className="rounded-xl" />
 </div>
 
-For me, I am better at understanding spoken Japanese than reading. And so, hearing the use of specific grammar patterns by Saki added another layer of dimensionality. Her unusally formal language (in Episode 1, usage of the verb すり合わせ/*suriawase*, which means 'reconciling, comparing and adjusting, bouncing of ideas, opinions etc. to obtain a fine-tuned integrated whole.' which is very much like her and Yuuta's proposed ideal relationship) and the tacking on of adjectives to her feelings to make them feel more tangible help us understand her just a bit more. 
+I can understand spoken Japanese better than reading it written. And so, hearing the use of specific grammar patterns by Saki added another layer of dimensionality. Her unusally formal language (in Episode 1, usage of the verb すり合わせ/*suriawase*, which means 'reconciling, comparing and adjusting, bouncing of ideas, opinions etc. to obtain a fine-tuned integrated whole.' which is very much like her and Yuuta's proposed ideal relationship) and the tacking on of adjectives to her feelings to make them feel more tangible help us understand her just a bit more. 
 
 And while we're on this topic, the voice acting direction is fantastic. Of course, you need this to be solid for a series so heavily focused on conversations, and *GimaiSei* delivers nicely. A major theme of the characters' relationship dynamic is how they draw clear lines for essentially everything. This, of course, changes over the course of the series as the duo begins to step over these lines and acknowledge that they will impose on each other (which is why I consider *GimaiSei* an exception romance drama but that's a different conversation). For example, in Episode 4, you have the following conversation when Yuuta is making breakfast for the two:
 
-> **S**: "But I promised..." \
->**Y** "As your instructor, I want you to pass the retest. So I'd prefer it if you concentrated on your studies today." \
->**S**: "Thanks. Then I'll do just that"
+>**Saki**: "But I promised..." \
+>**Yuuta** "As your instructor, I want you to pass the retest. So I'd prefer it if you concentrated on your studies today." \
+>**Saki**: "Thanks. Then I'll do just that"
 
 Typing this out makes it feel like the conversation was so stiff (intonation and tone of speech really matter, whew), but it shows the pair attempting to be clear with their words. Saki feels bad because she isn't holding up her end of the contract, and Yuuta, instead of saying "Oh it's fine, you should focus on your studies today" (like I would say, or I think most people would say), he is specific and assumes the clearly defined stance of Saki's instructor in saying that he wants her to focus on her studies. While the two ultimately mean the same, the first is a more personable/amicable/"lax" sentiment, while the second is clearer. It sounds curt but this is what makes up the pair's dynamic and I want to point this out. Yuuta ends the conversation by saying Saki doesn't owe him anything for it, which is a reconciliation but in a clearly defined stance considering gains and losses. 
 
@@ -49,7 +49,7 @@ My notes for the music were "*Words cannot express how much I liked this. It's g
   <img src="/images/blog/gimaisei/image6.webp" className="rounded-xl" />
 </div>
 
-The anime-only bits don't stop here. Besides the previously mentioned cassette tapes, the visual imagery with water and children are used beautifully for Saki. Saki's child self submerged in water shows her lost innocence, and how she needed to lock away her childish innocence for her mother. In fact, the theme of innocence being depicted through children is most prominent in the series' opening (with a beautiful beautiful song performed by fhana), which asks "What if Saki and Yuuta met each other as kids, before they each locked away their innocence?". The depth of visual storytelling done to show Saki's character is why I honestly consider her to be the protagonist of the anime, even though we follow (mainly) Yuuta's perspective. 
+The anime-only bits don't stop here. Besides the previously mentioned cassette tapes, the visual imagery with water and children are used beautifully for Saki. Saki's child self submerged in water shows her lost innocence, and how she needed to lock away her childish innocence for her mother. In fact, the theme of innocence being depicted through children is most prominent in the series' opening (with a beautiful beautiful song performed by fhana), which asks "What if Saki and Yuuta met each other as kids, before they each locked away their innocence?". The ending, in Mikawa Ghost-sensei's words, is from the ED artist hewa's lens through which they see the duo. on  The depth of visual storytelling done to show Saki's character is why I honestly consider her to be the protagonist of the anime, even though we follow (mainly) Yuuta's perspective. 
 
 <div align="center" style={{marginBottom: '-10px', marginTop: '-10px'}}>
   <img src="/images/blog/gimaisei/image7.webp" className="rounded-xl" />
