date change + minor edits

--- a/content/blog/gimaisei.mdx
+++ b/content/blog/gimaisei.mdx
@@ -1,7 +1,7 @@
 ---
 title: Gimai Seikatsu - Complementarity at its finest 
-description: 'Gimai Seikatsu'
-date: 2025-05-01
+description: ''
+date: 2025-05-03
 tags: ["anime"]
 published: true
 ---
@@ -71,3 +71,5 @@ My biggest feeling after watching this anime is awe, and how a different perspec
 God bless Souta Ueno
 
 *For a more unstructured episode-by-episode commentary, you can check out [this document.](https://docs.google.com/document/d/e/2PACX-1vR5jBUFRnH2ZHm2VNhdC3wayGS7TQOrcq1xjuxNPcXS17qPTVf1m9YDGD1Jabbx1Nvjq9LNNciQIAfk/pub)*
+
+<hr className="my-4 mt-8 mb-8 border-t-2" />
